--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,21 @@
+.slide-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .slide {
   outline: none;
-  min-width: 100%
+  min-width: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 64px;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 
 .slide h1 {
@@ -89,7 +104,7 @@
 }
 
 .slide th {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   font-weight: bold;
 }
 
@@ -98,5 +113,5 @@
 }
 
 .slide tr:nth-child(even) {
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
