--- a/styles.css
+++ b/styles.css
@@ -9,22 +9,26 @@
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0 64px;
+  padding: 24px 64px;
   box-sizing: border-box;
   overflow: hidden;
 }
 .slide h1 {
   font-size: 82px;
   font-weight: 700;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 .slide h2 {
   font-size: 40px;
   font-weight: 700;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 .slide h3 {
   font-size: 24px;
   font-weight: 700;
+  margin-bottom: 0;
 }
 .slide img {
   width: 100%;
@@ -35,10 +39,8 @@
 }
 .slide p {
   line-height: 36px;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 400;
-  margin-top: 6px;
-  margin-bottom: 6px;
 }
 .slide p:first-child {
   margin-top: 0;
@@ -47,8 +49,8 @@
   margin-bottom: 0;
 }
 .slide > p {
-  margin-top: 24px;
-  margin-bottom: 24px;
+  margin-top: 16px;
+  margin-bottom: 0;
 }
 .slide > p:first-child {
   margin-top: 0;
@@ -62,7 +64,9 @@
 }
 .slide ol,
 .slide ul {
-  font-size: 24px;
+  font-size: 20px;
+  line-height: 36px;
+  margin-bottom: 0;
 }
 .slide .table-wrapper {
   overflow-x: auto;
